--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,7 +79,7 @@ header > p{
     padding-left: 10px;
     margin: auto;
     text-shadow: 2px 2px 0px black;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 nav {
